--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,33 @@
+
 body {
   background-color: powderblue;
+  font-family: "Times New Roman", Times, serif;
 }
 h1 {
   color: blue;
+  background-image:url(../images/horizontal.jpg);
+width:100%;
+height:10%;
+top:0;
+bottom:0;
+right:0;
+left:0;
+background-repeat: repeat-x;
+font-style: italic;
+}
+ul li{
+	list-style-type: circle;
+}
+h2 {
+  background-image:url(../images/horizontal.jpg);
+width:100%;
+height:10%;
+top:0;
+bottom:0;
+right:0;
+left:0;
+background-repeat: repeat-x;
+font-style: italic;
 }
 p {
   color: red;
@@ -10,12 +35,29 @@ p {
 a {
 	color:orange;
 }
+nav ul li{
+	list-style-type: none;
+	
+}
 nav ul li a {
 	color:#ff00ff;
+	text-decoration: none;
+	
 }
 #page-copyright{
 	color:#ffaa00;
+	text-transform: uppercase;
+	font-size: 3px;
 }
 .byline{
 	color:#ffcc00;
+	font-size: 70%;
+}
+
+.bio p{
+	text-indent: 3em; 
+}
+footer{
+	text-align: center;
+	font-size: 12px;
 }
