--- a/styles/main.css
+++ b/styles/main.css
@@ -4,6 +4,9 @@ body {
 h1 {
   color: blue;
 }
+h2 {
+  color: blue;
+}
 p {
   color: red;
 }
@@ -17,5 +20,5 @@ nav ul li a {
 	color:#ffaa00;
 }
 .byline{
-	color:#ffcc00;
+	color:rgba(255, 204, 0, 0.5);
 }
