--- a/styles/main.css
+++ b/styles/main.css
@@ -18,10 +18,12 @@ font-style: italic;
 ul li{
 	list-style-type: circle;
 }
+
 h2 {
   background-image:url(../images/horizontal.jpg);
 width:100%;
 height:10%;
+color:blue;
 top:0;
 bottom:0;
 right:0;
@@ -50,7 +52,7 @@ nav ul li a {
 	font-size: 3px;
 }
 .byline{
-	color:#ffcc00;
+	color:rgba(255, 204, 0, 0.5);
 	font-size: 70%;
 }
 
