--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,8 @@ body {
 }
 h1 {
   color: blue;
-  background-image:url(../images/horizontal.jpg);
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(33,118,121,0) 35%, rgba(0,212,255,1) 100%);
 width:100%;
 height:10%;
 top:0;
@@ -14,13 +15,15 @@ right:0;
 left:0;
 background-repeat: repeat-x;
 font-style: italic;
+text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
 }
 ul li{
 	list-style-type: circle;
 }
 
 h2 {
-  background-image:url(../images/horizontal.jpg);
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(33,118,121,0) 35%, rgba(0,212,255,1) 100%);
 width:100%;
 height:10%;
 color:blue;
@@ -30,6 +33,7 @@ right:0;
 left:0;
 background-repeat: repeat-x;
 font-style: italic;
+text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
 }
 p {
   color: red;
@@ -51,6 +55,9 @@ nav ul li a {
 	text-transform: uppercase;
 	font-size: 3px;
 }
+figure img{
+	box-shadow: 2px 2px 0px 3px rgba(0, 0, 0, 0.2);
+}
 .byline{
 	color:rgba(255, 204, 0, 0.5);
 	font-size: 70%;
@@ -59,7 +66,32 @@ nav ul li a {
 .bio p{
 	text-indent: 3em; 
 }
+
+.width-wrap{
+	border: 1px solid rgba(0,0,0.3);
+	margin:0 auto;
+    height: 100%;
+    width: 1024px;
+	padding-left: 2em;
+	padding-right: 2em;
+	margin-bottom: 3em;
+	box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
+}
 footer{
 	text-align: center;
 	font-size: 12px;
+	margin-bottom: 2em;
+}
+
+footer hr{
+	width:50%;
+	min-width: 300px;
+	margin-bottom: 2em;
+	margin-top: 3em;
+	margin-left: 0 auto;
+	margin-right: 0 auto;
+	border-top:3px solid red;
+	border-bottom: 8px dotted red;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
 }
