--- a/styles/main.css
+++ b/styles/main.css
@@ -42,6 +42,7 @@ a {
 	color:orange;
 }
 nav ul li{
+	display: inline-block;
 	list-style-type: none;
 	
 }
@@ -49,6 +50,12 @@ nav ul li a {
 	color:#ff00ff;
 	text-decoration: none;
 	
+}
+header{
+	border-bottom:4px solid rgba(0,0,0.1);
+}
+header nav{
+	float:right;
 }
 #page-copyright{
 	color:#ffaa00;
@@ -68,6 +75,7 @@ figure img{
 }
 
 .width-wrap{
+	box-sizing: border-box;
 	border: 1px solid rgba(0,0,0.3);
 	margin:0 auto;
     height: 100%;
@@ -94,4 +102,18 @@ footer hr{
 	border-bottom: 8px dotted red;
 	border-top-left-radius: 8px;
 	border-top-right-radius: 8px;
+}
+.mugshot {
+	float:right;
+	 background-position: top 10px right 7px;
+	 
+}
+.paperclip {
+	background-image: url(../images/paperclip.png);
+	
+	background-size: contain;
+	width:50px;
+	height:50px;
+	position: absolute;
+	
 }
