--- a/styles/main.css
+++ b/styles/main.css
@@ -5,7 +5,8 @@ body {
 }
 h1 {
   color: blue;
-  background-image:url(../images/horizontal.jpg);
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(33,118,121,0) 35%, rgba(0,212,255,1) 100%);
 width:100%;
 height:10%;
 top:0;
@@ -14,20 +15,25 @@ right:0;
 left:0;
 background-repeat: repeat-x;
 font-style: italic;
+text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
 }
 ul li{
 	list-style-type: circle;
 }
+
 h2 {
-  background-image:url(../images/horizontal.jpg);
+  background: rgb(2,0,36);
+background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(33,118,121,0) 35%, rgba(0,212,255,1) 100%);
 width:100%;
 height:10%;
+color:blue;
 top:0;
 bottom:0;
 right:0;
 left:0;
 background-repeat: repeat-x;
 font-style: italic;
+text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
 }
 p {
   color: red;
@@ -36,6 +42,7 @@ a {
 	color:orange;
 }
 nav ul li{
+	display: inline-block;
 	list-style-type: none;
 	
 }
@@ -44,20 +51,71 @@ nav ul li a {
 	text-decoration: none;
 	
 }
+header{
+	border-bottom:4px solid rgba(0,0,0.1);
+}
+header nav{
+	float:right;
+}
 #page-copyright{
 	color:#ffaa00;
 	text-transform: uppercase;
 	font-size: 3px;
 }
+figure img{
+	box-shadow: 2px 2px 0px 3px rgba(0, 0, 0, 0.2);
+}
 .byline{
-	color:#ffcc00;
+	color:rgba(255, 204, 0, 0.5);
 	font-size: 70%;
 }
 
 .bio p{
 	text-indent: 3em; 
 }
+
+.width-wrap{
+	box-sizing: border-box;
+	border: 1px solid rgba(0,0,0.3);
+	margin:0 auto;
+    height: 100%;
+    width: 1024px;
+	padding-left: 2em;
+	padding-right: 2em;
+	margin-bottom: 3em;
+	box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.2);
+}
 footer{
 	text-align: center;
 	font-size: 12px;
+	margin-bottom: 2em;
+}
+
+footer hr{
+	width:50%;
+	min-width: 300px;
+	margin-bottom: 2em;
+	margin-top: 3em;
+	margin-left: 0 auto;
+	margin-right: 0 auto;
+	border-top:3px solid red;
+	border-bottom: 8px dotted red;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+}
+.mugshot {
+	float:right;
+	background-position: top 10px right 7px;
+	
+	margin-top: -1em;
+	 
+}
+.paperclip {
+	background-image: url(../images/paperclip.png);
+	
+	background-size: contain;
+	width:50px;
+	height:50px;
+	position: absolute;
+	
 }
