--- a/styles/main.css
+++ b/styles/main.css
@@ -4,9 +4,11 @@ body {
   font-family: "Times New Roman", Times, serif;
 }
 h1 {
-  color: blue;
+  color: transparent;
   background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(33,118,121,0) 35%, rgba(0,212,255,1) 100%);
+-webkit-background-clip: text;
+background-clip: text;
 width:100%;
 height:10%;
 top:0;
@@ -15,7 +17,7 @@ right:0;
 left:0;
 background-repeat: repeat-x;
 font-style: italic;
-text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 ul li{
 	list-style-type: circle;
@@ -24,16 +26,18 @@ ul li{
 h2 {
   background: rgb(2,0,36);
 background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(33,118,121,0) 35%, rgba(0,212,255,1) 100%);
+-webkit-background-clip: text;
+background-clip: text;
 width:100%;
 height:10%;
-color:blue;
+color:transparent;
 top:0;
 bottom:0;
 right:0;
 left:0;
 background-repeat: repeat-x;
 font-style: italic;
-text-shadow: 1px 1px rgba(0, 0, 0, 0.2);
+text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.2);
 }
 p {
   color: red;
@@ -57,13 +61,17 @@ header{
 header nav{
 	float:right;
 }
+header ul {
+	margin: 0;
+	padding: 0;
+}
 #page-copyright{
 	color:#ffaa00;
 	text-transform: uppercase;
 	font-size: 3px;
 }
 figure img{
-	box-shadow: 2px 2px 0px 3px rgba(0, 0, 0, 0.2);
+	box-shadow: 2px 2px 3px rgba(0, 0, 0, 0.5);
 }
 .byline{
 	color:rgba(255, 204, 0, 0.5);
@@ -76,10 +84,11 @@ figure img{
 
 .width-wrap{
 	box-sizing: border-box;
-	border: 1px solid rgba(0,0,0.3);
+	border: 1px solid rgba(0,0,0,0.3);
+	border-top: none;
 	margin:0 auto;
     height: 100%;
-    width: 1024px;
+    max-width: 1024px;
 	padding-left: 2em;
 	padding-right: 2em;
 	margin-bottom: 3em;
@@ -92,14 +101,16 @@ footer{
 }
 
 footer hr{
-	width:50%;
+	width:50vw;
 	min-width: 300px;
 	margin-bottom: 2em;
 	margin-top: 3em;
-	margin-left: 0 auto;
-	margin-right: 0 auto;
+	margin-left: auto;
+	margin-right: auto;
 	border-top:3px solid red;
 	border-bottom: 8px dotted red;
+	border-left: none;
+	border-right: none;
 	border-top-left-radius: 8px;
 	border-top-right-radius: 8px;
 }
