--- a/styles/main.css
+++ b/styles/main.css
@@ -89,12 +89,21 @@ header nav{
     padding-bottom: .5em;
     border-bottom: 1px dotted rgba(0,0,0.3);
 }
-
-header nav  ul li a:hover {
+header nav a {
+    text-decoration: none;
+    padding-right: 10px;
+    padding-top: 1em;
+    padding-bottom: 1em;
+    /* margin-left: 1em; */
+    margin-right: 2em;
+    display: block;
+}
+header a:hover {
     border-top-style: solid;
     border-width: 4px;
     border-color: red;
 }
+
 #page-copyright{
 	color:#ffaa00;
 	text-transform: uppercase;
@@ -103,6 +112,7 @@ header nav  ul li a:hover {
 figure img{
 	box-shadow: 2px 2px 0px 3px rgba(0, 0, 0, 0.2);
 }
+
 .byline{
 	color:rgba(255, 204, 0, 0.5);
 	font-size: 70%;
