--- a/styles/mobbile.css
+++ b/styles/mobbile.css
@@ -1,66 +1,78 @@
-@media only screen and (max-width: 768px)
-{
+@media only screen and (max-width: 768px) {
     header nav ul {
-    
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-}
-    header a:hover
-    {
+        margin-top: 1em;
+        margin-bottom: 1em;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        text-align: center;
+    }
+
+    header nav a {
+        border: none;
+        margin-right: 0;
+        padding-right: 0;
+    }
+
+    header a:hover {
         border: 0;
         text-decoration: underline;
     }
-	main
-    {
-        display:block;
+
+    main {
+        display: block;
     }
-	footer hr
-    {
-        display:none;
+
+    footer hr {
+        display: none;
     }
-    .paperclip
-    {
-        display:none;
+
+    .paperclip {
+        display: none;
     }
-    .mugshot
-    {
-       float:none;
-       margin-left: 0;
-       margin-right: 0;
+
+    .mugshot {
+        float: none;
+        margin-left: 0;
+        margin-right: 0;
     }
-    
-    .row-span-2.col-span-2
-    {
+
+    .row-span-2.col-span-2 {
         grid-row: span 1;
         grid-column: span 1;
     }
-   
+
     .burger {
-		width: 40px;
+        width: 40px;
         height: 25px;
         cursor: pointer;
         position: relative;
-        margin-left:auto;
-        margin-right:auto;
+        margin-left: auto;
+        margin-right: auto;
         margin-top: 1em;
 
-  }        
+    }
+
     .burger,
     .burger::before,
     .burger::after {
-       width: 40px;
-       border-top: 5px solid #A70DCD;
-   }
+        width: 40px;
+        border-top: 5px solid #A70DCD;
+    }
+
     .burger::before,
     .burger::after {
-       content: "";
-       display: block;
-       position: absolute;
-  }        
+        content: "";
+        display: block;
+        position: absolute;
+    }
 
-    .burger::before { top: 5px; }
-    .burger::after { top: 12px; }
-       
+    .burger::before {
+        top: 5px;
+    }
+
+    .burger::after {
+        top: 15px;
+    }
+
 }
